module(name = "tl2-cpp", version = "1.0")

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# Hedron's Compile Commands Extractor for Bazel
# https://github.com/hedronvision/bazel-compile-commands-extractor
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
    commit = "7fe1eab26d2b8eeb5e1c6a2f38bddb001e3f9696",
    # Replace the commit hash (above) with the latest (https://github.com/hedronvision/bazel-compile-commands-extractor/commits/main).
    # Even better, set up Renovate and let it do the work for you (see "Suggestion: Updates" in the README).
)

# Google test for unit testing
bazel_dep(name = "googletest", dev_dependency = True)
git_override(
    module_name = "googletest",
    remote = "https://github.com/google/googletest.git",
    commit = "d72f9c8aea6817cdf1ca0ac10887f328de7f3da2"
)

bazel_dep(name = "bazel_clang_format", dev_dependency = True )
git_override(
    module_name = "bazel_clang_format",
    remote = "https://github.com/oliverlee/bazel_clang_format.git",
    commit = "bef146b4f2f7a4df652ab408473a6a5b10bbcc6f"
)

bazel_dep(name = "rules_cc", version = "0.2.17")